--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sentence Generator</title>
+  <title>Origin Maker</title>
   <script src="https://unpkg.com/blockly/blockly.min.js"></script>
   <style>
     #container {
