--- a/index.html
+++ b/index.html
@@ -364,6 +364,9 @@
             { text: "> STATUS: \t", delay: 20 },
             { text: "ACTIVE", delay: 50, style: "color: #0f0" },
             { text: "LY POOR", delay: 10, style: "color: #4e2e52" },
+            { text: "\n", delay: 50 },
+            { text: "> MBTI: \t", delay: 20 },
+            { text: "INTP-T", delay: 50, style: "color: #ea00ff" },
 
             { text: "\n\n", delay: 100 },
             { text: ">> SKILL MATRIX <<", delay: 10, style: "color: #b19cd9; text-decoration: underline" },
