--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         const messages = [
             { text: "Initializing system... ", delay: 50 },
             { text: "Loading profile data... ", delay: 50 },
-            { text: "██████████ 100%", delay: 30, style: "color: #b19cd9" },
+            { text: "████████ 100%", delay: 30, style: "color: #b19cd9" },
             { text: "\n", delay: 200 },
             { text: "> Welcome to Mic Terminal // ACCESS GRANTED", delay: 10, style: "color: #0f0; font-weight: bold" },
 
@@ -372,31 +372,31 @@
             { text: ">> SKILL MATRIX <<", delay: 10, style: "color: #b19cd9; text-decoration: underline" },
             { text: "\n", delay: 100 },
             { text: "> MINECRAFT: \t", delay: 20 },
-            { text: " █████████ 95%", delay: 30, style: "color: #b19cd9" },
+            { text: " ███████ 95%", delay: 30, style: "color: #b19cd9" },
 
             { text: "\n", delay: 100 },
             { text: "> PYTHON: \t", delay: 20 },
-            { text: " █████████ 90%", delay: 30, style: "color: #b19cd9" },
+            { text: " ███████ 90%", delay: 30, style: "color: #b19cd9" },
 
             { text: "\n", delay: 100 },
             { text: "> PIANO: \t", delay: 20 },
-            { text: " █████████ 90%", delay: 30, style: "color: #b19cd9" },
+            { text: " ███████ 90%", delay: 30, style: "color: #b19cd9" },
 
             { text: "\n", delay: 100 },
             { text: "> VIOLIN: \t", delay: 20 },
-            { text: " ████████ 85%", delay: 30, style: "color: #b19cd9" },
+            { text: " ██████ 85%", delay: 30, style: "color: #b19cd9" },
 
             { text: "\n", delay: 100 },
             { text: "> TAE KWON-DO: \t", delay: 20 },
-            { text: " ███████ 70%", delay: 30, style: "color: #b19cd9" },
+            { text: " █████ 70%", delay: 30, style: "color: #b19cd9" },
 
             { text: "\n", delay: 100 },
             { text: "> UNITY: \t", delay: 20 },
-            { text: " █████ 50%", delay: 30, style: "color: #b19cd9" },
+            { text: " ███ 50%", delay: 30, style: "color: #b19cd9" },
 
             { text: "\n", delay: 100 },
             { text: "> ROBLOX: \t", delay: 20 },
-            { text: " █████ 50%", delay: 30, style: "color: #b19cd9" },
+            { text: " ███ 50%", delay: 30, style: "color: #b19cd9" },
 
             { text: "\n", delay: 100 },
             { text: "> SOCIAL: \t", delay: 20 },
