--- a/index.html
+++ b/index.html
@@ -422,6 +422,15 @@
             { text: "> [2014] MINECRAFT CONTENT CREATOR", delay: 30 },
 
             { text: "\n\n", delay: 100 },
+            { text: ">> EDUCATION HISTORY <<", delay: 10, style: "color: #b19cd9; text-decoration: underline" },
+            { text: "\n", delay: 100 },
+            { text: "> [2020-2021] University of Wollongong - Diploma in General Studies", delay: 30 },
+            { text: "\n", delay: 100 },
+            { text: "> [2021-2023] HKU SPACE Community College - Higher Diploma in eSports", delay: 30 },
+            { text: "\n", delay: 100 },
+            { text: "> [2025-Present] Saint Francis University - Bachelor of Science in Artificial Intelligence", delay: 30 },
+
+            { text: "\n\n", delay: 100 },
             { text: ">> CONTACT POINTS <<", delay: 10, style: "color: #b19cd9; text-decoration: underline" },
             { text: "\n", delay: 100 },
             { text: "> EMAIL: \t", delay: 20 },
