--- a/qrcode.html
+++ b/qrcode.html
@@ -15,7 +15,7 @@
         <img id="my-image" src="images/minecraft_icon.png" crossorigin="anonymous">
       </a-assets>
 
-      <a-marker type="pattern" url="source/pattern-qrcode.patt">
+      <a-marker type="pattern" url="source/minecraft_icon.patt">
         <a-image 
           src="#my-image"
           position="0 0.5 0" 
