--- a/qrcode.html
+++ b/qrcode.html
@@ -10,10 +10,10 @@
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
       
       <a-assets>
-        <a-asset-item id="myModel" src="https://raw.githack.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF-Binary/Duck.glb"></a-asset-item>
+        <a-asset-item id="myModel" src="source/DragonModel.glb"></a-asset-item>
       </a-assets>
 
-      <a-marker type="pattern" url="source/duck.patt">
+      <a-marker type="pattern" url="source/DragonModel.patt">
         <a-entity 
           gltf-model="#myModel" 
           scale="0.5 0.5 0.5" 
