--- a/sitemap.html
+++ b/sitemap.html
@@ -63,12 +63,16 @@
             <span class="file-path">/ extra.html</span>
         </li>
         <li>
-            <a href="sitemap.html" class="neon-text-sub">Site Map</a>
-            <span class="file-path">/ sitemap.html</span>
-        </li>
-        <li>
             <a href="card.html" class="neon-text-sub">Card</a>
             <span class="file-path">/ card.html</span>
+        </li>
+        <li>
+            <a href="qrcode.html" class="neon-text-sub">AR qrcode</a>
+            <span class="file-path">/ qrcode.html</span>
+        </li>
+        <li>
+            <a href="sitemap.html" class="neon-text-sub">Site Map</a>
+            <span class="file-path">/ sitemap.html</span>
         </li>
         </ul>
         <h2>Key Directories</h2>
