--- a/qrcode.html
+++ b/qrcode.html
@@ -20,7 +20,8 @@
           gltf-model="#dragonModel" 
           scale="0.2 0.2 0.2" 
           position="0 0 0"
-          rotation="-90 0 0"
+          rotation="0 0 0"
+          animation="property: rotation; to: 0 360 0; loop: true; dur: 10000"
           animation-mixer>
         </a-entity>
 
