--- a/qrcode.html
+++ b/qrcode.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Animated Dragon AR</title>
+    <title>Animated AR</title>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
@@ -18,7 +18,7 @@
         
         <a-entity 
           gltf-model="#dragonModel" 
-          scale="0.02 0.02 0.02" 
+          scale="0.08 0.08 0.08" 
           position="0 0 0"
           rotation="0 0 0"
           animation="property: rotation; to: 0 360 0; loop: true; dur: 10000"
