--- a/qrcode.html
+++ b/qrcode.html
@@ -13,11 +13,26 @@
       <a-assets>
         <a-asset-item id="dragonModel" src="source/DragonModel.glb"></a-asset-item>
       </a-assets>
+      <a-assets>
+        <a-asset-item id="gigifamily" src="source/gigifamilymix.glb"></a-asset-item>
+      </a-assets>
 
       <a-marker type="pattern" url="source/DragonModel.patt">
         
         <a-entity 
           gltf-model="#dragonModel" 
+          scale="0.05 0.05 0.05" 
+          position="0 0 0"
+          rotation="0 0 0"
+          animation="property: rotation; to: 0 360 0; loop: true; dur: 10000"
+          animation-mixer>
+        </a-entity>
+
+      </a-marker>
+      <a-marker type="pattern" url="source/gigifamilymix.patt">
+        
+        <a-entity 
+          gltf-model="#gigifamily" 
           scale="0.05 0.05 0.05" 
           position="0 0 0"
           rotation="0 0 0"
