--- a/qrcode.html
+++ b/qrcode.html
@@ -24,7 +24,7 @@
           scale="0.05 0.05 0.05" 
           position="0 0 0"
           rotation="0 0 0"
-          animation="property: rotation; to: 0 360 0; loop: true; dur: 10000"
+          animation="property: rotation; to: 0 360 0; loop: true; dur: 1000000"
           animation-mixer>
         </a-entity>
 
@@ -33,10 +33,10 @@
         
         <a-entity 
           gltf-model="#gigifamily" 
-          scale="0.05 0.05 0.05" 
+          scale="0.01 0.01 0.01" 
           position="0 0 0"
           rotation="0 0 0"
-          animation="property: rotation; to: 0 360 0; loop: true; dur: 10000"
+          animation="property: rotation; to: 0 360 0; loop: true; dur: 1000000"
           animation-mixer>
         </a-entity>
 
