--- a/sitemap.html
+++ b/sitemap.html
@@ -26,7 +26,7 @@
         <li><a href="education.html" class="">Education</a></li>
         <li><a href="skills.html" class="">Skills</a></li>
         <li><a href="extra.html" class="">Extra</a></li>
-        <li><a href="card.html" class="">Card</a></li>
+        <li><a href="python.html" class="">PythonIDE</a></li>
         <li><a href="sitemap.html" class="active">Site Map</a></li>
         </ul>
     </nav>
@@ -69,6 +69,10 @@
         <li>
             <a href="qrcode.html" class="neon-text-sub">AR qrcode</a>
             <span class="file-path">/ qrcode.html</span>
+        </li>
+        <li>
+            <a href="python.html" class="neon-text-sub">Python IDE</a>
+            <span class="file-path">/ python.html</span>
         </li>
         <li>
             <a href="sitemap.html" class="neon-text-sub">Site Map</a>
