--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="education.html" class="">Education</a></li>
         <li><a href="skills.html" class="">Skills</a></li>
         <li><a href="extra.html" class="">Extra</a></li>
-        <li><a href="card.html" class="">Card</a></li>
+        <li><a href="python.html" class="">PythonIDE</a></li>
         <li><a href="sitemap.html" class="">Site Map</a></li>
         </ul>
     </nav>
