--- a/python.html
+++ b/python.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Ten | Python IDE</title>
+    <link rel="icon" type="image/x-icon" href="images/icon.ico">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -136,6 +137,7 @@ print(emoji.emojize("Python in the browser is :thumbs_up:"))
                     aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.youtube.com/@Michael10" target="_blank" rel="noopener noreferrer"
                     aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+            <a href="https://discord.com/invite/KuWNd8av4q" target="_blank" rel="noopener noreferrer" aria-label="Discord"><i class="fab fa-discord"></i></a>
             </div>
         </div>
     </footer>
