--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                 <i class="fab fa-youtube icon"></i>
                 <strong>YouTube:</strong> <a href="https://www.youtube.com/@Michael10" target="_blank" rel="noopener noreferrer">@Michael10</a>
             </li>
+            <li>
+                <i class="fab fa-discord icon"></i>
+                <strong>Discord:</strong> <a href="https://discord.com/invite/KuWNd8av4q" target="_blank" rel="noopener noreferrer">@ten_mic_10</a>
+            </li>
         </ul>
     </section>
     
