--- a/extra.html
+++ b/extra.html
@@ -49,7 +49,7 @@
             <ul>
                 <li><i class="fas fa-code icon"></i> Automation & Scripting</li>
                 <li><i class="fas fa-gamepad icon"></i> Video Game Development (Unity, Roblox)</li>
-                <li><i class="fas fa-palette icon"></i> Digital Art & Content Creation (Minecraft)</li>
+                <li><i class="fas fa-palette icon"></i> Resource Pack & Content Creation (Minecraft)</li>
                 <li><i class="fas fa-music icon"></i> Playing Piano & Violin</li>
                 <li><i class="fas fa-hand-rock icon"></i> Martial Arts (Tae Kwon-Do)</li>
             </ul>
@@ -71,6 +71,11 @@
             <li>
                 <a href="https://www.youtube.com/@Michael10" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-youtube icon"></i> YouTube (@Michael10)
+                </a>
+            </li>
+            <li>
+                <a href="https://discord.com/invite/KuWNd8av4q" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-discord icon"></i> Discord (@ten_mic_10)
                 </a>
             </li>
             </ul>
