--- a/sitemap.html
+++ b/sitemap.html
@@ -81,7 +81,7 @@
                 </li>
                 <li>
                     <a href="origins_banner.html" class="neon-text-sub">Origin Banner Gen</a>
-                    <span class="file-path">/ python.html</span>
+                    <span class="file-path">/ origins_banner.html</span>
                 </li>
                 <li>
                     <a href="sitemap.html" class="neon-text-sub">Site Map</a>
