Site map update

--- a/sitemap.html
+++ b/sitemap.html
@@ -93,6 +93,7 @@
                 <li><span class="dir-name">/css/</span> - Global styles (style.css)</li>
                 <li><span class="dir-name">/js/</span> - Interactivity scripts (main.js)</li>
                 <li><span class="dir-name">/images/</span> - All site media</li>
+                <li><span class="dir-name">/source/</span> - All site other source</li>
             </ul>
         </section>
 
