--- a/origins_banner.html
+++ b/origins_banner.html
@@ -138,8 +138,14 @@
 
     <nav id="main-nav">
         <div class="logo">
-            <a href="index.html"><span class="neon-text-main">M</span>ichael <span class="neon-text-sub">T</span>en</a>
+            <a href="index.html" aria-label="Home page logo"><span class="neon-text-main">M</span>ichael <span
+                    class="neon-text-sub">T</span>en</a>
         </div>
+        <button class="hamburger" aria-label="Toggle navigation menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </button>
         <ul class="nav-links">
 
             <li><a href="index.html" class="">Home</a></li>
