--- a/python.html
+++ b/python.html
@@ -75,8 +75,14 @@
 
     <nav id="main-nav">
         <div class="logo">
-            <a href="index.html"><span class="neon-text-main">M</span>ichael <span class="neon-text-sub">T</span>en</a>
+            <a href="index.html" aria-label="Home page logo"><span class="neon-text-main">M</span>ichael <span
+                    class="neon-text-sub">T</span>en</a>
         </div>
+        <button class="hamburger" aria-label="Toggle navigation menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </button>
         <ul class="nav-links">
             <li><a href="index.html" class="">Home</a></li>
             <li><a href="experience.html" class="">Experience</a></li>
